# ugit

./: README.md
python/: Makefile  README.md  pyproject.toml
python/tests/: test_data.py
python/ugit/: base.py  cli.py  data.py
