[tool.poetry]
name = "ugit"
version = "0.1.0"
description = ""
authors = ["Alessandro Ferrini <alessandro.ferrini@apptecsrl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"
ruff = "^0.0.270"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ugit = "ugit.cli:main"
