[tool.poetry]
name = "ugit"
version = "0.1.0"
description = ""
authors = ["Alessandro Ferrini <alessandro.ferrini@apptecsrl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
black = "*"
ruff = "*"
isort = "*"
pytest-cov = "*"
coverage = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ugit = "ugit.cli:main"
